--- a/result.html
+++ b/result.html
@@ -3,7 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{url_for('static',filename='styles.css')}}">
+    <style>
+        .formdiv{
+    padding-left: 70px;
+    padding-top:35px;
+}
+input,select{
+    margin-bottom:20px;
+}
+.vald{
+    padding-left: 560px;
+    padding-top: 30px;
+    border-style: solid;
+}</style>
     <title>Valuation Result</title>
 </head>
 <body>
